compiler/fir/analysis-tests/testData/resolve/diagnostics/valOnAnnotationParameter.kt
annotation class A(
    <!VAR_ANNOTATION_PARAMETER{LT}!><!VAR_ANNOTATION_PARAMETER{PSI}!>var<!> a: Int<!>,
    <!MISSING_VAL_ON_ANNOTATION_PARAMETER!>b: String<!>
)
